syntax = "proto3";

package greeting;

option java_package = "com.proto.greeting";
option java_multiple_files = true;

message GreetingRequest {
  string first_name = 1;
}

message GreetingResponse {
  string result = 1;
}

service GreetingService {
  rpc Greet(GreetingRequest) returns (GreetingResponse);
  rpc GreetManyTimes(GreetingRequest) returns (stream GreetingResponse);
  rpc LongGreet(stream GreetingRequest) returns (GreetingResponse);
  rpc GreetEveryone(stream GreetingRequest) returns (stream GreetingResponse);
  rpc GreetWithDeadline(GreetingRequest) returns (GreetingResponse);
}